# sudribotik_balise

./: .gitignore  Dockerfile_louise_with_ros  Dockerfile_mini_ros  Dockerfile_ros  README.md  ROS1 with docker.txt  code_pami_simple.txt  ros_main.py  ros_sub.py  run_docker.sh  run_docker_mini_ros.sh  run_louise_docker.sh
1_IHM/: app.py
1_IHM/templates/: camera.html
_1_IHM/: app.py  app.py.orig
_1_IHM/scripts/: VideoStream.py  formatdata.py
_1_IHM/templates/: balise.html  beacon.html  camera.html  (+4 more)
_2_ROS/: plant_publisher.py  publisher.py  readme.txt  robot_coordinates.db  robot_publisher.py  robot_subscriber.py  ros_publisher.py  ros_subscriber.py  sql.py  sql_database.py
_2_ROS/Test/src/balise/: CMakeLists.txt  package.xml
_2_ROS/Test/src/balise/msg/: Obj.msg  ObjArray.msg
_2_ROS/Test/src/balise/src/: coordinates.db
_3_TRAITEMENT_d_IMAGES/: detectAruco.py  detectAruco2.py  detectColor.py  detectColor2.py  redressBoardUsingAruco.py  ros_arucoCalc.py  ros_detectAruco.py  ros_detectColor.py  ros_redressBoardUsingAruco.py  ros_undistortImage.py  straightenBoard.py  straightenBoardUsingAruco.py  takePhoto.py
_4_BASE_DE_DONNEES/: databaseManager.py
init/: Dockerfile_louise_with_ros  aruco_identification.json  configuration.json  configuration_backup.json  environnement_variable.txt  gameElements_identification.json  get_hotspot_ip_address.py  init_database.py  ip_manager.py  network_manager.py  prettify_json.py  requirements.txt  start.sh  start_louise.py  verify_beacon_connection.py
msg/: Obj.msg
test_24/: calibration.py  clients.json  multiserver2.py
(+150 files in other folders)
